--- a/_config.yml
+++ b/_config.yml
@@ -1,68 +1,22 @@
-#
-# This file contains configuration flags to customize your site
-#
-
-# Name of your site (displayed in the header)
-name: Capsicum
-
-# Short bio or description (displayed in the header)
+title: Capsicum
 description: If pain must come, may it come quickly.
 
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/rebeccabilbro/rebeccabilbro.github.io/master/images/pepper.png
-
-#
-# Flags below are optional
-#
-
-# Includes an icon in the footer for each username you enter
-footer-links:
-  github: rebeccabilbro/rebeccabilbro.github.io
-  instagram:
-  linkedin: rebeccabilbro
-  twitter: rebeccabilbro
-
-# Used for Sitemap.xml and your RSS feed
-url: http://rebeccabilbro.github.io
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
+url: https://rebeccabilbro.github.io/
 baseurl: ""
+paginate_path: "blog/page:num/"
+permalink: blog/:title/
 
-#
-# !! You don't need to change any of the configuration flags below !!
-#
+markdown: kramdown
+highlighter: rouge
+gems: [jekyll-paginate]
+paginate: 5
 
-permalink: /:title/
+navigation:
+ - title: Home
+   url: /index.html
+ - title: About
+   url: /about
 
-# The release of Jekyll Now that you're using
-version: v1.2.0
-
-# Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
-  input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
-
-# Set the Sass partials directory, as we're using @imports
-sass:
-  style: :expanded # You might prefer to minify using :compressed
-
-# Use the following plug-ins
-gems:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-
-# Exclude these files from your production _site
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - CNAME
+social:
+   github: rebeccabilbro
+   twitter: rebeccabilbro
