--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ paginate: 5
 navigation:
  - title: Home
    url: /index.html
+ - title: Archive
+   url: /archive
  - title: About
    url: /about
 
